# GameplayFootball

./: .gitignore  .travis.yml  CMakeLists.txt  compileandlaunch.bat  football.config  log.txt  sources.cmake
databases/: names.sqlite  namesdb_sql.txt
databases/default/: database - Copia.sqlite  database.sqlite  formation_template.txt  template_kit.psd  template_kit_v1.psd
databases/default/images_competitions/: ligue1.psd
databases/default/images_teams/1bundesliga/: bayernmunich_kit_01.psd  bayernmunich_kit_02.psd  borussiadortmund_kit_01.psd  borussiadortmund_kit_02.psd
databases/default/images_teams/eredivisie/: afcajax_kit_01.psd  afcajax_kit_02.psd  psv_kit_01.psd  psv_kit_02.psd
databases/default/images_teams/premierleague/: arsenal_kit_01.psd  arsenal_kit_02.psd  manchesterunited_kit_01.psd  manchesterunited_kit_02.psd
databases/default/images_teams/primeradivision/: fcbarcelona_kit_01.psd  fcbarcelona_kit_02.psd  realmadrid_kit_01.psd  realmadrid_kit_02.psd
media/animations/: basetest.anim.util
media/animations/ballcontrol/idle/: 180_todo.anim.todo
media/animations/ballcontrol/sprint/: 000.anim.old  020_close.animx  020_left.anim.meh  020_right_decel_stretch.animx
media/animations/ballcontrol/walk/: 000_decel_decel_2step.anim.lelijk  000_far.animx  020_ballright.anim.meh  020_left.anim.old  020_left.animx  045_sidestep.anim.disabled_for_now  045_test_close.anim.x  090_decel.anim.previous  090_strongfoot.anim.workingtest  090_weakfoot.anim.probeer  090_weakfoot.anim.workingtest  180_decel.anim.bak  180_decel_decel.anim.bak
media/animations/debug_luxury/: autogen v0 b0 _to_ v0 b0 a-134.anim  autogen v0 b0 _to_ v0 b0 a-178.anim  autogen v0 b0 _to_ v0 b0 a-45.anim  autogen v0 b0 _to_ v0 b0 a-90.anim  autogen v0 b0 _to_ v0 b0 a0.anim  autogen v0 b0 _to_ v0 b0 a134.anim  autogen v0 b0 _to_ v0 b0 a178.anim  autogen v0 b0 _to_ v0 b0 a45.anim  autogen v0 b0 _to_ v0 b0 a90.anim  autogen v0 b0 _to_ v1 b-135 a-45.anim  autogen v0 b0 _to_ v1 b-135 a0.anim  autogen v0 b0 _to_ v1 b-135 a134.anim  autogen v0 b0 _to_ v1 b-135 a178.anim  autogen v0 b0 _to_ v1 b-135 a45.anim  autogen v0 b0 _to_ v1 b-135 a90.anim  autogen v0 b0 _to_ v1 b-45 a-134.anim  autogen v0 b0 _to_ v1 b-45 a-45.anim  autogen v0 b0 _to_ v1 b-45 a-90.anim  autogen v0 b0 _to_ v1 b-45 a0.anim  autogen v0 b0 _to_ v1 b-45 a134.anim  autogen v0 b0 _to_ v1 b-45 a178.anim  autogen v0 b0 _to_ v1 b-45 a45.anim  autogen v0 b0 _to_ v1 b-45 a90.anim  autogen v0 b0 _to_ v1 b0 a-134.anim  autogen v0 b0 _to_ v1 b0 a-178.anim  autogen v0 b0 _to_ v1 b0 a-45.anim  autogen v0 b0 _to_ v1 b0 a-90.anim  autogen v0 b0 _to_ v1 b0 a0.anim  autogen v0 b0 _to_ v1 b0 a134.anim  autogen v0 b0 _to_ v1 b0 a178.anim  autogen v0 b0 _to_ v1 b0 a45.anim  autogen v0 b0 _to_ v1 b0 a90.anim  autogen v0 b0 _to_ v1 b135 a-134.anim  autogen v0 b0 _to_ v1 b135 a-178.anim  autogen v0 b0 _to_ v1 b135 a-45.anim  autogen v0 b0 _to_ v1 b135 a-90.anim  autogen v0 b0 _to_ v1 b135 a0.anim  autogen v0 b0 _to_ v1 b135 a45.anim  autogen v0 b0 _to_ v1 b45 a-134.anim  autogen v0 b0 _to_ v1 b45 a-178.anim  (+403 more)
media/animations/movement/idle/: 000_idlelevel1.anim_test_kraanvogel
media/animations/movement/sprint/: 000.animx  000_decel_decel.anim.ugly  045.animx  045_left.animx
media/animations/movement/walk/: 000_accel.animx
media/animations/movement_luxury/dribble/: 000.anim  000_decel.anim  020.anim  020_decel.anim  020_left.anim  045.anim  045_left.anim  090.anim  090_left.anim  180.anim  180_decel.anim
media/animations/movement_luxury/idle/: 000.anim  000_RECHTOP.anim.test  020.anim  045.anim  090.anim  135.anim  135_accel.anim  180.anim
media/animations/movement_luxury/sprint/: 000.anim.bak  000.anim.old  020.anim  (+6 more)
media/animations/templates/: idleD000.anim.toomuchbentknees  sprintD000.anim.old  walkD135.anim.newtry  walkD135.animx  walkD135_left.anim.newtry  walkD135_left.animx
media/menu/: planmap.psd  planmapentry.psd  scoreboard_bg.psd  tacticsdebug.psd  tvlogo.psd
media/menu/controller/: controller.psd  controller_left.psd  controller_right.psd  hidevices.psd
media/menu/main/: friendly.pdn  title01.xcf
media/menu/radar/: ball.psd  p1.psd  p2.psd  radar.psd
media/objects/balls/: arrowed.max  arrowed.object  ball02.psd  ball03.psd  ballshadow.ase  ballshadow.max  generic.max
media/objects/helpers/: boxes.ase  boxes.max  direction.max  exclam.ase  exclam.max  largedebugcircle.max  pilon.max  smalldebugcircle.max
media/objects/lighting/: day.object  dusk.object  mainmenu.object  night.object  nightdebug.object  noon.object
media/objects/menu/: background01.3ds  background01.dae  background01.fbx  background01.max  background01.mtl  background02.ase  background03.ase
media/objects/officials/: redcard.max  yellowcard.max
media/objects/players/: player_dud.object  player_empty.object  player_lowres.object
media/objects/stadiums/: goals.max
media/shaders/: noise.psd
media/sounds/: ballsound.wav.low  ballsound.xrns  crowd01.xrns  crowd02.xrns
media/textures/adboards/: ad_blauwprint01.psd  ad_brokenbread02.psd  ad_groningen01.psd  ad_linux.png.tmpoff  ad_linux.psd  ad_omeganorth01.psd  ad_polygon01.psd  ad_polygon02.psd  ad_vanheusden.psd  ad_xeexoo.psd  ad_your_ad_here.psd  ytec_logo.eps
media/textures/pitch/: pitch_placeholders.psd  pitch_specular_01.ifl  seamlessgrass01.txt
media/textures/stadium/: crowd01.psd  goalnetting.psd  greenish_floor.psd
src/data/: playerdata.cpp  playerdata.hpp  teamdata.cpp  teamdata.hpp
src/menu/: gameplan.cpp  gameplan.hpp  mainmenu.cpp  mainmenu.hpp  menuscene.cpp  menutask.cpp  pagefactory.cpp  pagefactory.hpp  settings.cpp
src/menu/ingame/: gamepage.cpp
src/menu/startmatch/: formation.cpp  formation.hpp  loadingmatch.cpp  matchoptions.cpp  matchoptions.hpp  teamselect.cpp  teamselect.hpp
src/menu/widgets/: gameplansubmenu.cpp  gameplansubmenu.hpp  planmap.cpp  planmap.hpp  playerdetail.cpp  playerdetail.hpp
src/onthepitch/: match.cpp
src/utils/gui2/: style.hpp
tools/animator/: Makefile  Makefile.win  animator  animator.config  c.bat  convert_slashes.sh  log.txt  m  m.bat
(+285 files in other folders)
